[gd_scene load_steps=8 format=3 uid="uid://bucrqt5wwg5gn"]

[ext_resource type="Script" path="res://addons/map_tile_provider/examples/mosaic.gd" id="1_0k40s"]
[ext_resource type="Script" path="res://addons/map_tile_provider/examples/SubViewportContainer.gd" id="1_6m2wn"]
[ext_resource type="Script" path="res://addons/map_tile_provider/examples/Latitude.gd" id="2_6uw1f"]
[ext_resource type="Script" path="res://addons/map_tile_provider/examples/Longitude.gd" id="3_8p4cb"]
[ext_resource type="Script" path="res://addons/map_tile_provider/examples/map.gd" id="3_ftfcy"]
[ext_resource type="Script" path="res://addons/map_tile_provider/map_tile_loader.gd" id="3_k18hd"]
[ext_resource type="Script" path="res://addons/map_tile_provider/examples/Zoom.gd" id="4_vy78h"]

[node name="mosaic" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0k40s")
latitude = 48.861
longitude = 2.289
zoom = 16.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 3

[node name="Latitude" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Latitude:"
script = ExtResource("2_6uw1f")

[node name="Longitude" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Longitude:"
script = ExtResource("3_8p4cb")

[node name="Zoom" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Zoom:"
script = ExtResource("4_vy78h")

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_6m2wn")

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/SubViewportContainer"]
handle_input_locally = false
snap_2d_transforms_to_pixel = true
render_target_update_mode = 4

[node name="Map" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport"]
script = ExtResource("3_ftfcy")

[node name="MapTileLoader" type="Node" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]
script = ExtResource("3_k18hd")
cache_tiles = true
concurrent_requests = 4

[node name="Zoom1" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom2" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom3" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom4" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom5" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom6" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom7" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom8" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom9" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom10" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom11" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom12" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom13" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom14" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom15" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom16" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom17" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom18" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom19" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Zoom20" type="Node2D" parent="VBoxContainer/SubViewportContainer/SubViewport/Map"]

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/SubViewportContainer/SubViewport"]

[connection signal="latitude_changed" from="." to="VBoxContainer/GridContainer/Latitude" method="_on_mosaic_latitude_changed"]
[connection signal="longitude_changed" from="." to="VBoxContainer/GridContainer/Longitude" method="_on_mosaic_longitude_changed"]
[connection signal="zoom_changed" from="." to="VBoxContainer/GridContainer/Zoom" method="_on_mosaic_zoom_changed"]
[connection signal="resized" from="VBoxContainer/SubViewportContainer" to="VBoxContainer/SubViewportContainer" method="_on_resized"]
[connection signal="size_changed" from="VBoxContainer/SubViewportContainer/SubViewport" to="VBoxContainer/SubViewportContainer/SubViewport/Map" method="_on_sub_viewport_size_changed"]
[connection signal="latitude_changed" from="VBoxContainer/SubViewportContainer/SubViewport/Map" to="." method="_on_map_latitude_changed"]
[connection signal="longitude_changed" from="VBoxContainer/SubViewportContainer/SubViewport/Map" to="." method="_on_map_longitude_changed"]
[connection signal="zoom_changed" from="VBoxContainer/SubViewportContainer/SubViewport/Map" to="." method="_on_map_zoom_changed"]
[connection signal="tile_loaded" from="VBoxContainer/SubViewportContainer/SubViewport/Map/MapTileLoader" to="VBoxContainer/SubViewportContainer/SubViewport/Map" method="_on_tile_loaded"]
